parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statement statements
Rule 4     statement -> for_statement
Rule 5     statement -> expression SEMICOLON
Rule 6     statement -> function_call SEMICOLON
Rule 7     for_statement -> FOR LPAREN declaration SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE
Rule 8     declaration -> INT ID EQUAL expression
Rule 9     assignment -> ID EQUAL expression
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression TIMES expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression LE expression
Rule 15    expression -> expression LT expression
Rule 16    expression -> expression GE expression
Rule 17    expression -> expression GT expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> NUMBER
Rule 20    expression -> ID
Rule 21    expression -> STRING
Rule 22    function_call -> ID DOT ID LPAREN RPAREN

Terminals, with rules where they appear

COMMA                : 
DIVIDE               : 13
DOT                  : 22
EQUAL                : 8 9
FOR                  : 7
GE                   : 16
GT                   : 17
ID                   : 8 9 20 22 22
INT                  : 8
LBRACE               : 7
LE                   : 14
LPAREN               : 7 18 22
LT                   : 15
MINUS                : 11
NUMBER               : 19
PLUS                 : 10
RBRACE               : 7
RPAREN               : 7 18 22
SEMICOLON            : 5 6 7 7
STRING               : 21
TIMES                : 12
error                : 

Nonterminals, with rules where they appear

assignment           : 7
declaration          : 7
expression           : 5 7 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18
for_statement        : 4
function_call        : 6
program              : 0
statement            : 2 3
statements           : 1 3 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statement statements
    (4) statement -> . for_statement
    (5) statement -> . expression SEMICOLON
    (6) statement -> . function_call SEMICOLON
    (7) for_statement -> . FOR LPAREN declaration SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) function_call -> . ID DOT ID LPAREN RPAREN

    FOR             shift and go to state 7
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 10
    STRING          shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    for_statement                  shift and go to state 4
    expression                     shift and go to state 5
    function_call                  shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement .
    (3) statements -> statement . statements
    (2) statements -> . statement
    (3) statements -> . statement statements
    (4) statement -> . for_statement
    (5) statement -> . expression SEMICOLON
    (6) statement -> . function_call SEMICOLON
    (7) for_statement -> . FOR LPAREN declaration SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) function_call -> . ID DOT ID LPAREN RPAREN

    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)
    FOR             shift and go to state 7
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 10
    STRING          shift and go to state 11

    statement                      shift and go to state 3
    statements                     shift and go to state 12
    for_statement                  shift and go to state 4
    expression                     shift and go to state 5
    function_call                  shift and go to state 6

state 4

    (4) statement -> for_statement .

    FOR             reduce using rule 4 (statement -> for_statement .)
    LPAREN          reduce using rule 4 (statement -> for_statement .)
    NUMBER          reduce using rule 4 (statement -> for_statement .)
    ID              reduce using rule 4 (statement -> for_statement .)
    STRING          reduce using rule 4 (statement -> for_statement .)
    $end            reduce using rule 4 (statement -> for_statement .)
    RBRACE          reduce using rule 4 (statement -> for_statement .)


state 5

    (5) statement -> expression . SEMICOLON
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

    SEMICOLON       shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LE              shift and go to state 18
    LT              shift and go to state 19
    GE              shift and go to state 20
    GT              shift and go to state 21


state 6

    (6) statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 22


state 7

    (7) for_statement -> FOR . LPAREN declaration SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 23


state 8

    (18) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 24

state 9

    (19) expression -> NUMBER .

    SEMICOLON       reduce using rule 19 (expression -> NUMBER .)
    PLUS            reduce using rule 19 (expression -> NUMBER .)
    MINUS           reduce using rule 19 (expression -> NUMBER .)
    TIMES           reduce using rule 19 (expression -> NUMBER .)
    DIVIDE          reduce using rule 19 (expression -> NUMBER .)
    LE              reduce using rule 19 (expression -> NUMBER .)
    LT              reduce using rule 19 (expression -> NUMBER .)
    GE              reduce using rule 19 (expression -> NUMBER .)
    GT              reduce using rule 19 (expression -> NUMBER .)
    RPAREN          reduce using rule 19 (expression -> NUMBER .)


state 10

    (20) expression -> ID .
    (22) function_call -> ID . DOT ID LPAREN RPAREN

    SEMICOLON       reduce using rule 20 (expression -> ID .)
    PLUS            reduce using rule 20 (expression -> ID .)
    MINUS           reduce using rule 20 (expression -> ID .)
    TIMES           reduce using rule 20 (expression -> ID .)
    DIVIDE          reduce using rule 20 (expression -> ID .)
    LE              reduce using rule 20 (expression -> ID .)
    LT              reduce using rule 20 (expression -> ID .)
    GE              reduce using rule 20 (expression -> ID .)
    GT              reduce using rule 20 (expression -> ID .)
    DOT             shift and go to state 26


state 11

    (21) expression -> STRING .

    SEMICOLON       reduce using rule 21 (expression -> STRING .)
    PLUS            reduce using rule 21 (expression -> STRING .)
    MINUS           reduce using rule 21 (expression -> STRING .)
    TIMES           reduce using rule 21 (expression -> STRING .)
    DIVIDE          reduce using rule 21 (expression -> STRING .)
    LE              reduce using rule 21 (expression -> STRING .)
    LT              reduce using rule 21 (expression -> STRING .)
    GE              reduce using rule 21 (expression -> STRING .)
    GT              reduce using rule 21 (expression -> STRING .)
    RPAREN          reduce using rule 21 (expression -> STRING .)


state 12

    (3) statements -> statement statements .

    $end            reduce using rule 3 (statements -> statement statements .)
    RBRACE          reduce using rule 3 (statements -> statement statements .)


state 13

    (5) statement -> expression SEMICOLON .

    FOR             reduce using rule 5 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 5 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 5 (statement -> expression SEMICOLON .)
    ID              reduce using rule 5 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 5 (statement -> expression SEMICOLON .)
    $end            reduce using rule 5 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> expression SEMICOLON .)


state 14

    (10) expression -> expression PLUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 27

state 15

    (11) expression -> expression MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 28

state 16

    (12) expression -> expression TIMES . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 29

state 17

    (13) expression -> expression DIVIDE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 30

state 18

    (14) expression -> expression LE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 31

state 19

    (15) expression -> expression LT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 32

state 20

    (16) expression -> expression GE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 33

state 21

    (17) expression -> expression GT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression GT expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    ID              shift and go to state 25
    STRING          shift and go to state 11

    expression                     shift and go to state 34

state 22

    (6) statement -> function_call SEMICOLON .

    FOR             reduce using rule 6 (statement -> function_call SEMICOLON .)
    LPAREN          reduce using rule 6 (statement -> function_call SEMICOLON .)
    NUMBER          reduce using rule 6 (statement -> function_call SEMICOLON .)
    ID              reduce using rule 6 (statement -> function_call SEMICOLON .)
    STRING          reduce using rule 6 (statement -> function_call SEMICOLON .)
    $end            reduce using rule 6 (statement -> function_call SEMICOLON .)
    RBRACE          reduce using rule 6 (statement -> function_call SEMICOLON .)


state 23

    (7) for_statement -> FOR LPAREN . declaration SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (8) declaration -> . INT ID EQUAL expression

    INT             shift and go to state 36

    declaration                    shift and go to state 35

state 24

    (18) expression -> LPAREN expression . RPAREN
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

    RPAREN          shift and go to state 37
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LE              shift and go to state 18
    LT              shift and go to state 19
    GE              shift and go to state 20
    GT              shift and go to state 21


state 25

    (20) expression -> ID .

    RPAREN          reduce using rule 20 (expression -> ID .)
    PLUS            reduce using rule 20 (expression -> ID .)
    MINUS           reduce using rule 20 (expression -> ID .)
    TIMES           reduce using rule 20 (expression -> ID .)
    DIVIDE          reduce using rule 20 (expression -> ID .)
    LE              reduce using rule 20 (expression -> ID .)
    LT              reduce using rule 20 (expression -> ID .)
    GE              reduce using rule 20 (expression -> ID .)
    GT              reduce using rule 20 (expression -> ID .)
    SEMICOLON       reduce using rule 20 (expression -> ID .)


state 26

    (22) function_call -> ID DOT . ID LPAREN RPAREN

    ID              shift and go to state 38


state 27

    (10) expression -> expression PLUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

    SEMICOLON       reduce using rule 10 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 10 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 10 (expression -> expression PLUS expression .)
    LE              reduce using rule 10 (expression -> expression PLUS expression .)
    LT              reduce using rule 10 (expression -> expression PLUS expression .)
    GE              reduce using rule 10 (expression -> expression PLUS expression .)
    GT              reduce using rule 10 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 10 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! LE              [ shift and go to state 18 ]
  ! LT              [ shift and go to state 19 ]
  ! GE              [ shift and go to state 20 ]
  ! GT              [ shift and go to state 21 ]


state 28

    (11) expression -> expression MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

    SEMICOLON       reduce using rule 11 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 11 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 11 (expression -> expression MINUS expression .)
    LE              reduce using rule 11 (expression -> expression MINUS expression .)
    LT              reduce using rule 11 (expression -> expression MINUS expression .)
    GE              reduce using rule 11 (expression -> expression MINUS expression .)
    GT              reduce using rule 11 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! LE              [ shift and go to state 18 ]
  ! LT              [ shift and go to state 19 ]
  ! GE              [ shift and go to state 20 ]
  ! GT              [ shift and go to state 21 ]


state 29

    (12) expression -> expression TIMES expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

    SEMICOLON       reduce using rule 12 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 12 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 12 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 12 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 12 (expression -> expression TIMES expression .)
    LE              reduce using rule 12 (expression -> expression TIMES expression .)
    LT              reduce using rule 12 (expression -> expression TIMES expression .)
    GE              reduce using rule 12 (expression -> expression TIMES expression .)
    GT              reduce using rule 12 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 12 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! LE              [ shift and go to state 18 ]
  ! LT              [ shift and go to state 19 ]
  ! GE              [ shift and go to state 20 ]
  ! GT              [ shift and go to state 21 ]


state 30

    (13) expression -> expression DIVIDE expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

    SEMICOLON       reduce using rule 13 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 13 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 13 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 13 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 13 (expression -> expression DIVIDE expression .)
    LE              reduce using rule 13 (expression -> expression DIVIDE expression .)
    LT              reduce using rule 13 (expression -> expression DIVIDE expression .)
    GE              reduce using rule 13 (expression -> expression DIVIDE expression .)
    GT              reduce using rule 13 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 13 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! LE              [ shift and go to state 18 ]
  ! LT              [ shift and go to state 19 ]
  ! GE              [ shift and go to state 20 ]
  ! GT              [ shift and go to state 21 ]


state 31

    (14) expression -> expression LE expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
    SEMICOLON       reduce using rule 14 (expression -> expression LE expression .)
    RPAREN          reduce using rule 14 (expression -> expression LE expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LE              shift and go to state 18
    LT              shift and go to state 19
    GE              shift and go to state 20
    GT              shift and go to state 21

  ! PLUS            [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! MINUS           [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! TIMES           [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! LE              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! LT              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! GE              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! GT              [ reduce using rule 14 (expression -> expression LE expression .) ]


state 32

    (15) expression -> expression LT expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
    SEMICOLON       reduce using rule 15 (expression -> expression LT expression .)
    RPAREN          reduce using rule 15 (expression -> expression LT expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LE              shift and go to state 18
    LT              shift and go to state 19
    GE              shift and go to state 20
    GT              shift and go to state 21

  ! PLUS            [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! MINUS           [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! TIMES           [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! DIVIDE          [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! LE              [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! LT              [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! GE              [ reduce using rule 15 (expression -> expression LT expression .) ]
  ! GT              [ reduce using rule 15 (expression -> expression LT expression .) ]


state 33

    (16) expression -> expression GE expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
    SEMICOLON       reduce using rule 16 (expression -> expression GE expression .)
    RPAREN          reduce using rule 16 (expression -> expression GE expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LE              shift and go to state 18
    LT              shift and go to state 19
    GE              shift and go to state 20
    GT              shift and go to state 21

  ! PLUS            [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! MINUS           [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! TIMES           [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! DIVIDE          [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! LE              [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! LT              [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! GE              [ reduce using rule 16 (expression -> expression GE expression .) ]
  ! GT              [ reduce using rule 16 (expression -> expression GE expression .) ]


state 34

    (17) expression -> expression GT expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . GT expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
    SEMICOLON       reduce using rule 17 (expression -> expression GT expression .)
    RPAREN          reduce using rule 17 (expression -> expression GT expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LE              shift and go to state 18
    LT              shift and go to state 19
    GE              shift and go to state 20
    GT              shift and go to state 21

  ! PLUS            [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! MINUS           [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! TIMES           [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! DIVIDE          [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! LE              [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! LT              [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! GE              [ reduce using rule 17 (expression -> expression GT expression .) ]
  ! GT              [ reduce using rule 17 (expression -> expression GT expression .) ]


state 35

    (7) for_statement -> FOR LPAREN declaration . SEMICOLON expression SEMICOLON assignment RPAREN LBRACE statements RBRACE

    SEMICOLON       shift and go to state 39


state 36

    (8) declaration -> INT . ID EQUAL expression

    ID              shift and go to state 40


state 37

    (18) expression -> LPAREN expression RPAREN .

    SEMICOLON       reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    LE              reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    LT              reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    GE              reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    GT              reduce using rule 18 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 18 (expression -> LPAREN expression RPAREN .)


state 38

    (22) function_call -> ID DOT ID . LPAREN RPAREN

    LPAREN          shift and go to state 41


state 39
